# rejig

./: .gitignore  CHANGELOG.md  LICENSE  README.md  a.txt  b.txt  build.sh  c.txt  d.txt  e.txt  f.txt  grammar.md  me.txt  pragmas.txt  rejig.cabal  result.txt  sample.txt  sample2.txt  snippits.txt
src/: Main.hs
src/Rejig/: Ast.hs  IESorter.hs  Lang.hs  Lexer.hs  Parser.hs  Pretty.hs  Settings.hs  Sorter.hs
test/: HelloSpec.hs
test/snippets/: b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  result.txt
