cabal-version: 3.0
name:                rejig
version:             0.0.1
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common deps
  build-depends:
    base >=4.13 && <4.14
    , relude
    , text
    , containers
    , mtl
    , megaparsec
    , parser-combinators
    , pretty
    , filepath
    , optparse-applicative

  default-language:    Haskell2010
  ghc-options:
    -Wall
    -fno-warn-name-shadowing
    -Wcompat
    -Wincomplete-uni-patterns
  default-extensions:
    OverloadedStrings
    LambdaCase
  mixins:
    base hiding (Prelude)
    , relude (Relude as Prelude)

executable rejig
  import: deps
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Rejig.Ast
    Rejig.Lang
    Rejig.Lexer
    Rejig.Parser
    Rejig.Pretty
    Rejig.Settings
    Rejig.Sorter

test-suite rejig-tests
  import: deps
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test, src
  main-is:              Spec.hs
  build-depends:
      hspec
    , QuickCheck
    , hspec-megaparsec
